--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^2.3.0",
         "vue-infinite-loading": "^2.4.4",
         "vue-sweetalert2": "^1.6.4"
     }
